--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="home-sci">
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/karthik12024"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="https://www.gmail.com/"><i class="fa-solid fa-envelope"></i></a>
+                <a href="mailto:karthik72911@gmail.com"><i class="fa-solid fa-envelope"></i></a>
             </div>
         </div>
         <div class="home-logo">
