--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
             <div class="contact-links">
                 <a href="#"><i class="fa-brands fa-instagram"></i><label>INSTAGRAM</label></a>
                 <a href="https://www.linkedin.com/in/karthik12024"><i class="fa-brands fa-linkedin"></i><label>LINKEDIN</label></a>
-                <a href="https://mail.google.com"><i class="fa-solid fa-envelope"></i><label>GMAIL</label></a>
+                <a href="mailto:karthik72911@gmail.com"><i class="fa-solid fa-envelope"></i><label>GMAIL</label></a>
             </div>
         </div>    
         
