--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,8 @@
       <div class="projects-content">
         <h1>MY PROJECTS</h1>
         <div class="project">
-          <a href="https://karthik12024.github.io/tic-tac-toe.github.io/"><img src="project-img/toy-2561392_1920.jpg" /><br />TIC-TAC-TOE</a>
+          <a href="https://karthik12024.github.io/tic-tac-toe.github.io/"><img src="project-img/tic-tac-toe.jpg" /><br />TIC-TAC-TOE</a>
+          <a href="https://karthik12024.github.io/stone-paper-scissor.github.io/"><img src="project-img/stone_paper_scissor.jpg" /><br />STONE-PAPER-SCISSOR</a>     
         </div>
       </div>
     </section>
